--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
   <div class="topbar">
     <div class="fill">
       <div class="container">
-        <a class="brand" href="#">Ask</a>
+        <a class="brand" data-route="/">Ask</a>
         <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="active"><a data-route="/">Home</a></li>
+          <li><a data-route="Survey">Surveys</a></li>
+          <li><a>Contact</a></li>
         </ul>
       </div>
     </div>
@@ -22,8 +22,7 @@
   <div class="container">
     <div class="sidebar">
     </div>
-    <div class="content">
-      <%= yield %>
+    <div class="content" data-yield="main">
     </div>
     <footer>
       <p>&copy; Company 2011</p>
