--- a/app/assets/javascripts/views/surveys/index.html
+++ b/app/assets/javascripts/views/surveys/index.html
@@ -14,7 +14,7 @@
       <td>
         <a data-route="survey">Show</a>
         <a data-route="survey.edit">Edit</a>
-        <a data-route="survey">Analyze</a>
+        <a data-route="survey/analyze">Analyze</a>
       </td>
     </tr>
   </tbody>
