--- a/app/assets/javascripts/views/surveys/show.html
+++ b/app/assets/javascripts/views/surveys/show.html
@@ -30,7 +30,10 @@
   </tr>
   <tr data-foreach-response="survey.responses">
     <td data-bind="response.responder.phone_number"></td>
-    <td data-foreach-question="survey.questions.sortedBy.order" data-bind="response.answers.indexedBy.question_id | get question.id | get 'toArray.0.text'"></td>
+    <td data-foreach-question="survey.questions.sortedBy.order" data-context-answer="response.answers.indexedBy.question_id | get question.id | get 'toArray.0'">
+      <span data-bind="answer.text"></span>
+      <span data-showif="answer.rated?" data-bind="answer.numeric_rating | append ')' | prepend '('"></span>
+    </td>
     <td>
       <a class="btn small primary">More Info</a>
       <a class="btn danger small" data-event-click="response.destroy">Destroy</a>
