--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+table.responses {
+  td.actions_column {
+    width: 130px;
+  }
+}
 .chart {
   &.daily {
     margin-right: 20px;
