Revamp survey index

--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.survey_slug {
+  text-align: center;
+}
 table.responses {
   td.actions_column {
     width: 130px;
