--- a/app/assets/javascripts/views/surveys/index.html
+++ b/app/assets/javascripts/views/surveys/index.html
@@ -1,21 +1,30 @@
 <h1>Surveys</h1>
-<table>
-  <thead>
-    <th>Name</th>
-    <th>Questions</th>
-    <th>Total Responses</th>
-    <th></th>
-  </thead>
-  <tbody>
-    <tr data-foreach-survey="surveys">
-      <td data-bind="survey.name"></td>
-      <td data-bind="survey.questions.length"></td>
-      <td data-bind="survey.response_count"></td>
-      <td>
+<div data-foreach-survey="surveys">
+  <div class="page-header">
+    <h2 data-bind="survey.name"></h2>
+  </div>
+  <div class="row survey_slug">
+    <div class="span4">
+      <h3 data-bind="survey.responses_count"></h3>
+      <h4>total responses</h4>
+      <a data-route="survey">see all</a>
+    </div>
+    <div class="span4">
+      <h3 data-bind="survey.current_week_responses_count"></h3>
+      <h4>responses this week</h4>
+      <p><span data-bind="survey.previous_week_responses_count"></span> responses last week</p>
+    </div>
+    <div class="span4">
+      <h3 data-bind="survey.firstRatedQuestion.stats.current_week_average | round 2"></h3>
+      <h4>average rating this week</h4>
+      <p><span data-bind="survey.firstRatedQuestion.stats.previous_week_average | round 2"></span> average last week</p>
+    </div>
+    <div class="span4">
+    </div>
+    <div class="span4">
         <a data-route="survey">Show</a>
         <a data-route="survey.edit">Edit</a>
         <a data-route="survey/analyze">Analyze</a>
-      </td>
-    </tr>
-  </tbody>
-</table>
+    </div>
+  </div>
+</div>
