--- a/app/assets/javascripts/views/surveys/index.html
+++ b/app/assets/javascripts/views/surveys/index.html
@@ -15,7 +15,7 @@
       <p><span data-bind="survey.previous_week_responses_count"></span> responses last week</p>
     </div>
     <div class="span4">
-      <h3 data-bind="survey.firstRatedQuestion.stats.current_week_average | round 2"></h3>
+      <h3 data-bind="survey.firstRatedQuestion.stats.current_week_average | round 2 | default 0 | append ' / 5'"></h3>
       <h4>average rating this week</h4>
       <p><span data-bind="survey.firstRatedQuestion.stats.previous_week_average | round 2"></span> average last week</p>
     </div>
