--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,9 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
  *= require twitter/bootstrap
- *= require_tree .
+ *= require dashboard
+ *= require responses
+ *= require surveys
 */
 body {
   padding-top: 60px !important; /* 40px to make the container go all the way to the bottom of the topbar */
