--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
           <li><a data-route="Survey">Surveys</a></li>
           <li><a>Contact</a></li>
         </ul>
+        <ul class="nav secondary-nav">
+          <li><%= link_to('Sign Out', destroy_customer_session_path, :method => :delete) %></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -25,7 +28,7 @@
     <div class="content" data-yield="main">
     </div>
     <footer>
-      <p>&copy; Company 2011</p>
+      <p>&copy; Ask 2011</p>
     </footer>
   </div>
 </body>
