For views in prod

--- a/app/assets/javascripts/views/surveys/analyze.html
+++ b/app/assets/javascripts/views/surveys/analyze.html
@@ -1,4 +1,4 @@
 <h1>Results for <span data-bind="survey.name"></span></h1>
 
-<div data-view="Ask.RatingOverTimeView"></div>
-<div data-view="Ask.RatingDistributionView"></div>
+<div data-view="RatingOverTimeView"></div>
+<div data-view="RatingDistributionView"></div>
