--- a/app/assets/javascripts/views/surveys/index.html
+++ b/app/assets/javascripts/views/surveys/index.html
@@ -22,9 +22,9 @@
     <div class="span4">
     </div>
     <div class="span4">
-        <a data-route="survey">Show</a>
-        <a data-route="survey.edit">Edit</a>
-        <a data-route="survey/analyze">Analyze</a>
+        <a class="btn" data-route="survey">Show</a>
+        <a class="btn disabled danger" data-route="survey.edit">Edit</a>
+        <a class="btn info" data-route="survey/analyze">Analyze</a>
     </div>
   </div>
 </div>
