Made analysis views rerender with new data

--- a/app/assets/javascripts/views/surveys/analyze.html
+++ b/app/assets/javascripts/views/surveys/analyze.html
@@ -1,4 +1,6 @@
 <h1>Results for <span data-bind="survey.name"></span></h1>
 
+<h3>Rating Average for the past month</h3>
 <div data-view="RatingOverTimeView"></div>
+<h3>Rating distributions for the past week</h3>
 <div data-view="RatingDistributionView"></div>
