Make surveys customize their finishing message.

--- a/app/views/admin/surveys/_show.html.erb
+++ b/app/views/admin/surveys/_show.html.erb
@@ -12,6 +12,10 @@
           <td><%= @survey.name %></td>
         </tr>
         <tr>
+          <th>Finished Message</th>
+          <td>"<%= @survey.finish_message %>"</td>
+        </tr>
+        <tr>
           <th>Phone Number</th>
           <td><%= @survey.phone_number %></td>
         </tr>
