Alerts API exposed

--- a/app/assets/javascripts/views/surveys/index.html
+++ b/app/assets/javascripts/views/surveys/index.html
@@ -23,8 +23,8 @@
     </div>
     <div class="span4">
         <a class="btn" data-route="survey">Show</a>
-        <a class="btn disabled danger" data-route="survey.edit">Edit</a>
-        <a class="btn info" data-route="survey/analyze">Analyze</a>
+        <a class="btn disabled danger" data-route="survey | routeToAction 'edit'">Edit</a>
+        <a class="btn info" data-route="survey | routeToAction 'analyze'">Analyze</a>
     </div>
   </div>
 </div>
