--- a/app/assets/javascripts/views/surveys/show.html
+++ b/app/assets/javascripts/views/surveys/show.html
@@ -11,8 +11,8 @@
     </dl>
   </div>
   <div class="span4">
-    <a class="btn danger disabled" data-route="survey/edit">Edit</a>
-    <a class="btn info" data-route="survey/analyze">Analyze</a>
+    <a class="btn danger disabled" data-route="survey | routeToAction 'edit'">Edit</a>
+    <a class="btn info" data-route="survey | routeToAction 'analyze'">Analyze</a>
   </div>
 </div>
 
