--- a/app/assets/stylesheets/responses.css.scss.erb
+++ b/app/assets/stylesheets/responses.css.scss.erb
@@ -2,5 +2,6 @@
   h4 {
     padding: 20px 80px;
     background: url(<%= asset_path 'open-quote.gif'%>) no-repeat 20px 0px;
+    min-height: 36px;
   }
 }
