--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   <div class="topbar">
     <div class="fill">
       <div class="container">
-        <a class="brand" data-route="/">Ask</a>
+        <a class="brand" data-route="'/'">Ask</a>
         <ul class="nav">
-          <li class="active"><a data-route="/">Home</a></li>
+          <li class="active"><a data-route="'/'">Home</a></li>
           <li><a data-route="Survey">Surveys</a></li>
           <li><a>Contact</a></li>
         </ul>
