Added some stuff for alerts

--- a/app/assets/javascripts/views/surveys/show.html
+++ b/app/assets/javascripts/views/surveys/show.html
@@ -13,6 +13,7 @@
   <div class="span4">
     <a class="btn danger disabled" data-route="survey | routeToAction 'edit'">Edit</a>
     <a class="btn info" data-route="survey | routeToAction 'analyze'">Analyze</a>
+    <a class="btn info" data-route="alertsRouteOptions">Alerts</a>
   </div>
 </div>
 
@@ -27,6 +28,7 @@
     <td data-bind="question.answerRateAsPercentage | append ' %'"></td>
   </tr>
 </table>
+
 <h2>Responses</h2>
 <table class="responses">
   <tr>
