Big frontend work

--- a/app/assets/javascripts/views/alerts/index.html
+++ b/app/assets/javascripts/views/alerts/index.html
@@ -1,4 +1,7 @@
-<h2>Alerts on <span data-bind="survey.name"></span></h2>
+<div class="page-header">
+  <div data-partial="surveys/_navigation"></div>
+  <h2>Alerts on <span data-bind="survey.name"></span></h2>
+</div>
 
 <h3>Keyword Alerts
 <table>
