--- a/app/assets/javascripts/views/surveys/index.html
+++ b/app/assets/javascripts/views/surveys/index.html
@@ -5,7 +5,7 @@
   </div>
   <div class="row survey_slug">
     <div class="span4">
-      <h3 data-bind="survey.responses_count"></h3>
+      <h3 data-bind="survey.totalResponses"></h3>
       <h4>total responses</h4>
       <a data-route="survey">see all</a>
     </div>
