--- a/app/assets/javascripts/views/surveys/show.html
+++ b/app/assets/javascripts/views/surveys/show.html
@@ -1,68 +1,20 @@
+<div class="page-header">
+<div data-partial="surveys/_navigation"></div>
 <h1>Survey: <span data-bind="survey.name"></span></h1>
-<div class="row">
-  <div class="span12">
-    <dl>
-      <dt>Public Phone number:</dt>
-      <dd data-bind="survey.phone_number"></dd>
-      <dt>Responses received:</dt>
-      <dd data-bind="survey.responses_count"></dd>
-      <dt>Currently Active:</dt>
-      <dd data-bind="survey.active"></dd>
-    </dl>
-  </div>
-  <div class="span4">
-    <a class="btn danger disabled" data-route="survey | routeToAction 'edit'">Edit</a>
-    <a class="btn info" data-route="survey | routeToAction 'analyze'">Analyze</a>
-    <a class="btn info" data-route="alertsRouteOptions">Alerts</a>
-  </div>
 </div>
-
-<h2>Questions</h2>
-<table>
-  <tr>
-    <th>Question</th>
-    <th>Answer Rate</th>
-  </tr>
-  <tr data-foreach-question="survey.questions">
-    <td data-bind="question.text"></td>
-    <td data-bind="question.answerRateAsPercentage | append ' %'"></td>
-  </tr>
-</table>
-
-<h2>Responses</h2>
-<table class="responses">
-  <tr>
-    <th>Responder</th>
-    <th data-foreach-question="survey.questions.sortedBy.order" data-bind="question.text | truncate 1000"></th>
-    <th>Actions</th>
-  </tr>
-  <tr data-foreach-response="paginatedResponses">
-    <td><a data-route="response.responder" data-bind="response.responder.phone_number"></a></td>
-    <td data-foreach-question="survey.questions.sortedBy.order" data-context-answer="response.answers.indexedByUnique.question_id | get question.id">
-      <span data-bind="answer.text"></span>
-      <span data-showif="answer.rated?" data-bind="answer.numeric_rating | append ')' | prepend '('"></span>
-    </td>
-    <td class="actions_column">
-      <a class="btn small primary" data-route="response">More Info</a>
-      <a class="btn danger small" data-event-click="response.destroy" data-confirm="Are you sure you want to destroy this response? You can't undo this!">Destroy</a>
-    </td>
-  </tr>
-</table>
-<div class="pagination">
-  <ul>
-    <li class="prev" data-addclass-disabled="paginatedResponses.page | equals 1">
-      <a data-bind-href="'#!/surveys/' | append survey.id | append '?page=1'">First</a>
-    </li>
-    <li data-addclass-disabled="paginatedResponses.page | equals previousPage">
-      <a data-bind-href="'#!/surveys/' | append survey.id | append '?page=' | append previousPage">&larr; Previous</a>
-    </li>
-    <li data-foreach-page="responsePages" data-addclass-active="page | equals paginatedResponses.page">
-      <a data-bind-href="'#!/surveys/' | append survey.id | append '?page=' | append page" data-bind="page"></a>
-    </li>
-    <li data-addclass-disabled="paginatedResponses.page | equals paginatedResponses.pageCount">
-      <a data-bind-href="'#!/surveys/' | append survey.id | append '?page=' | append nextPage">Next &rarr;</a>
-    <li class="next" data-addclass-disabled="paginatedResponses.page | equals paginatedResponses.pageCount">
-      <a data-bind-href="'#!/surveys/' | append survey.id | append '?page=' | append paginatedResponses.pageCount">Last</a>
-    </li>
-  </ul>
+<div class="row">
+  <div class="span-one-third">
+    <h3>Active Phone Numbers</h3>
+    <div data-foreach-segment="survey.segments">
+      <a data-route="routes.surveys[survey].surveySegments[segment]" data-bind="segment.phone_number"></a>
+      -
+      <span data-bind="segment.name"></span>
+    </div>
+  </div>
+  <div class="span-one-third">
+    <h3>Total respones received</h3>
+    <h1 data-bind="survey.totalResponses"></h1>
+  </div>
+  <div class="span-one-third">
+  </div>
 </div>
