--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
  *= require twitter/bootstrap
+ *= require rickshaw/rickshaw.min
  *= require dashboard
  *= require responses
  *= require surveys
