--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -36,3 +36,9 @@ table.responses {
     }
   }
 }
+#survey_segments_legend {
+  float:right;
+  background: none;
+  padding: 5px;
+  width: 130px;
+}
