--- a/app/assets/javascripts/views/questions/index.html
+++ b/app/assets/javascripts/views/questions/index.html
@@ -1,7 +1,5 @@
-<div class="page-header">
-  <div data-partial="surveys/_navigation"></div>
-  <h2>Questions for <span data-bind="survey.title"></span></h2>
-</div>
+<div data-partial="surveys/_navigation"></div>
+<h1>Questions for <span data-bind="survey.name"></span></h1>
 
 <table>
   <tr>
@@ -13,5 +11,6 @@
     <td data-bind="question.answerRateAsPercentage | append ' %'"></td>
   </tr>
 </table>
+
 <a class="btn" data-route="routes.surveys[survey]">Back to Survey</a>
 <a class="btn danger disabled" data-routage="routes.surveys[survey].questions.new">New Question</a>
