Make sure editing alerts updates the tokenized field.

--- a/app/assets/javascripts/views/alerts/_form.html
+++ b/app/assets/javascripts/views/alerts/_form.html
@@ -9,7 +9,7 @@
   <div class="clearfix">
     <label for="keyword">Recipients</label>
     <div class="input">
-      <input class="xlarge" name="recipients" data-view="TokenizedFieldView" data-bind="alert.options.recipients" type="text">
+      <input class="xlarge" name="recipients" data-view="TokenizedFieldView" data-keypath="alert.options.recipients" type="text">
     </div>
   </div>
 </fieldset>
