Add survey duplication in rubyland.

--- a/app/assets/javascripts/views/responses/show.html
+++ b/app/assets/javascripts/views/responses/show.html
@@ -4,7 +4,7 @@
     <p>
       <a data-bind="response.responder.phone_number" data-route="response.responder"></a>
       responded to this survey
-      "<a data-route="response.survey" data-bind="response.survey.name"></a>"
+      "<a data-route="response.segment.survey" data-bind="response.segment.survey.name"></a>"
       at
       <span data-bind="response.created_at"></span>.
     </p>
